[gd_scene load_steps=7 format=2]

[ext_resource path="res://Action RPG Resources/Player/sora_sprites.png" type="Texture" id=1]
[ext_resource path="res://scripts/Sora_player.gd" type="Script" id=2]

[sub_resource type="CapsuleShape2D" id=1]

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sora_run_to_left:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Rect2( 2, 583, 32, 42 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sora_run_to_up:region_rect")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Rect2( 1, 309, 29, 50 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "run_to_left"
length = 0.8
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sora_run_to_left:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ Rect2( 2, 583, 32, 42 ), Rect2( 36, 582, 42, 43 ), Rect2( 83, 583, 47, 42 ), Rect2( 133, 582, 40, 43 ), Rect2( 177, 582, 31, 43 ), Rect2( 213, 580, 42, 45 ), Rect2( 261, 586, 47, 39 ), Rect2( 310, 583, 34, 42 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "run_to_up"
length = 0.8
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sora_run_to_up:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ Rect2( 1, 309, 29, 50 ), Rect2( 33, 306, 25, 53 ), Rect2( 64, 312, 22, 47 ), Rect2( 92, 313, 26, 46 ), Rect2( 123, 309, 29, 50 ), Rect2( 156, 306, 25, 53 ), Rect2( 186, 312, 22, 47 ), Rect2( 215, 313, 26, 46 ) ]
}

[node name="Sora_player" type="KinematicBody2D"]
position = Vector2( 465, 293 )
script = ExtResource( 2 )

[node name="Sora_stopped_up" type="Sprite" parent="."]
visible = false
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 1, 255, 27, 51 )

[node name="Sora_stopped_down" type="Sprite" parent="."]
visible = false
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 2, 2, 28, 52 )

[node name="Sora_stopped" type="Sprite" parent="."]
visible = false
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 2, 521, 25, 53 )

[node name="Sora_run_to_left" type="Sprite" parent="."]
visible = false
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 2, 583, 32, 42 )

[node name="Sora_run_to_up" type="Sprite" parent="."]
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 1, 309, 29, 50 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 447, 270 )
shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 3 )
anims/run_to_left = SubResource( 2 )
anims/run_to_up = SubResource( 4 )
